# session-resources

./: LICENSE  README.md
2023_24/: README.md
2023_24/week1/: README.md
2023_24/week1/easy/: README.md
2023_24/week1/hard/: 00_template.py  01_echo.py  02_create_response.py  02a_control_data.py  02b_validate_ctrl.py  03_send_response.py  03a_read_headers.py  03b_parse_headers.py  04_recursion.py  04a_read_body.py  04b_parse_body.py  05_response.py  06_dynamic_response.py  07a_errors.py  07b_errors_refactored.py  08_routing.py  README.md  client.py  lib.py
2023_24/week14/: README.md  cloud_bot.js  dog_bot.js  guarded_bot.js  simple_bot.js
2023_24/week2/: README.md
2023_24/week2/hard/: 01_parse_request.py  04_recursion.py  README.md  lib.py
2023_24/week3/hard/: Dockerfile  docker-compose.yml
2023_24/week8/hard/: 00_template.py  pyproject.toml  template.py
2023_24/week8/hard/lib/: __init__.py  ai.py  entity.py  error.py  map.py  wall.py
